Stop code blocks from wrapping text

--- a/patterns/base/pre/sass/partials/_extends.scss
+++ b/patterns/base/pre/sass/partials/_extends.scss
@@ -6,8 +6,10 @@
   text-align: left;
   word-break: normal;
   white-space: pre;
+  word-wrap: normal;
   direction: ltr;
   tab-size: 2;
+  overflow-y: overlay;
 }
 
 %base--pre {
